--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Document</title>
   </head>
   <body>
-    <h2 id="root"></h2>
+    <h2 id="root">Not Redered</h2>
     <!-- <script>
       const heading = document.createElement("h1");
       heading.innerHTML = "helloworld from js";
       const root = document.getElementById("root");
       root.appendChild(heading);
     </script> -->
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
+    ></script> -->
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
